mock-carousel.cy.js is added

--- a/cypress/fixtures/product-carousel.html
+++ b/cypress/fixtures/product-carousel.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="swiper-slide">
-        <img src="https://cdn.lambdatest.com/sample-product.jpg" alt="Product" />
+        <img src="https://ecommerce-playground.lambdatest.io/image/cache/catalog/maza/demo/mz_poco/megastore-2/product/10-270x338.webp" alt="Product" />
         <div class="caption">
           <h4 class="title"><a class="text-ellipsis-2">Sample Product Title</a></h4>
           <div class="price">
@@ -16,7 +16,7 @@
         </div>
       </div>
       <div class="swiper-slide">
-        <img src="https://cdn.lambdatest.com/another-product.jpg" alt="Product" />
+        <img src="https://ecommerce-playground.lambdatest.io/image/cache/catalog/maza/demo/mz_poco/megastore-2/product/10-270x338.webp" alt="Product" />
         <div class="caption">
           <h4 class="title"><a class="text-ellipsis-2">Another Product</a></h4>
           <div class="price">
